# server

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  ERRORS.md  ERRORS2.md  FUTURES.md  LICENSE  PLAN.md  README.md  TODO.md  codeql-analyze.php  composer.json  config.h.in~  config.m4  config.w32  configure~  php_server.h  php_true_async_server.h  stub.c
tests/: .gitignore  CMakeLists.txt
tests/bench/: .gitignore  bench_bidi_server.php  bench_multithread_server.php  bench_server.php  bench_static_server.php  bench_upload_server.php  h2spec-baseline.txt  h2spec_server.php  h3-baseline.json  h3_bench_server.php  h3_compare.sh  h3_compare_h2load.sh  h3_multi_conn.php  h3_multi_payload.php  h3_payload_bench.php  h3_timer_rearm.php  interop-results.txt  malloc_count.c  min_repro.php  probe_server.php  run_alloc_audit.sh  run_bench.sh  run_bench_bidi.sh  run_bench_h2.sh  run_bench_h2_upload.sh  run_bench_multithread.sh  run_bench_static.sh  run_h2spec.sh  tls_conformance_server.php
tests/common/: php_sapi_test.c  php_sapi_test.h
tests/ctrl-c/: run.sh
tests/ctrl-c/scenarios/: 01-signal-basic.php  02-devserver-pattern.php  03-pcntl-after.php  04-pcntl-before.php  05-open-connection.php  06-multi-waiters.php  07-sigterm.php  08-http-server-c.php
tests/e2e/: 001-simple-get.phpt  002-post-with-body.phpt  003-headers-access.phpt  004-query-params.phpt  005-status-codes.phpt  006-http-methods.phpt  007-large-response.phpt  008-content-length.phpt  009-empty-body.phpt  010-await-body.phpt  011-pipelining.phpt  HttpTestCase.php
tests/fuzz/: .gitignore  Makefile  h3_datagram_fuzz.c
tests/h3client/: .gitignore  h3client.c  h3probe.py
tests/interop/quic/: Dockerfile  Dockerfile.source  README.md  entry.php  implementations.snippet.json  run_endpoint.sh
tests/perf/: README.md  run.sh
tests/perf/certs/: cert.pem  key.pem
tests/perf/servers/: _common.php  server_setbody.php  server_static.php  server_stream.php  server_upload.php
tests/phpt/http1parser/: 001-http-request-simple-get.phpt  002-http-request-post-with-body.phpt  003-http-request-headers.phpt  004-http-request-uri-query.phpt  005-http-request-keep-alive.phpt  006-http-request-methods.phpt  007-http-request-parse-error.phpt  008-http-request-content-length.phpt  009-http-request-await-body.phpt  010-http-request-extension-methods.phpt  011-http-request-getter-api.phpt  012-http-request-path-query.phpt
tests/phpt/multipart/: 001-simple-field.phpt  002-file-upload.phpt  003-mixed-fields-files.phpt  004-getFile-method.phpt  005-moveTo.phpt  006-getStream.phpt  007-parser-pool-reuse.phpt  008-edge-empty-and-binary.phpt  009-charset-and-special-names.phpt  010-uploaded-file-error-paths.phpt  011-malformed-and-multivalue.phpt  012-rfc5987-filename.phpt  013-edge-lf-and-preamble.phpt  014-uploaded-file-error-states.phpt  015-uploaded-file-move-failures.phpt  016-parser-error-paths.phpt  017-limits-and-overflows.phpt  018-header-ordering-and-charset.phpt
tests/phpt/server/: _free_port.inc
tests/phpt/server/chaos/: 001-h2-rapid-reset.phpt  002-h2-continuation-flood.phpt
tests/phpt/server/compression/: 001-config-setters.phpt  002-config-setters-phase2.phpt  010-h1-buffered-gzip.phpt  011-h1-buffered-skips.phpt  012-h1-streaming-gzip.phpt  020-h2-buffered-gzip.phpt  030-h1-request-gzip-in.phpt  040-h1-buffered-brotli.phpt  041-h1-streaming-brotli.phpt  050-h1-buffered-zstd.phpt  060-h1-request-malformed.phpt  070-encoder-pool-reuse.phpt
tests/phpt/server/core/: 001-server-config.phpt  002-http-response.phpt  003-http-server-basic.phpt  004-server-start-stop.phpt  005-server-e2e-simple.phpt  007-backpressure-config.phpt  007-server-transfer-handler-dispatch.phpt  008-backpressure-telemetry.phpt  009-http-exception-from-handler.phpt  009-server-start-stop.phpt  010-server-e2e-simple.phpt  010-timeout-zero-rejected.phpt  011-drain-config-validation.phpt  011-server-transfer-threadpool.phpt  012-backpressure-config.phpt  012-drain-telemetry-reset.phpt  014-log-emit-on-start-stop.phpt  015-log-multipart-debug.phpt  016-log-tls-warn.phpt  018-log-off-no-overhead.phpt  019-log-formatters.phpt  019-parse-error-503-oom.phpt  020-builtin-worker-pool.phpt  021-bootloader.phpt  (+65 more)
tests/phpt/websocket/: 001-class-registration.phpt  002-close-code-enum.phpt  003-classes-are-final-and-private-ctor.phpt  004-handler-registration-arity.phpt  005-handshake-101.phpt  006-recv-text-frame.phpt  007-send-echo.phpt  008-close-handshake.phpt  009-binary-frames.phpt  010-fragmented-message.phpt  011-concurrent-recv.phpt  012-upgrade-reject.phpt  013-upgrade-subprotocol.phpt  014-config-knobs.phpt  015-keepalive-ping.phpt  016-auto-pong.phpt  017-remote-address.phpt  018-wss-echo.phpt  019-h2-extended-connect.phpt  020-permessage-deflate-echo.phpt  021-permessage-deflate-bomb.phpt  022-h2-permessage-deflate.phpt  023-backpressure-trysend.phpt  024-backpressure-send-blocks.phpt  025-spawned-writer-teardown.phpt  026-pong-timeout-close.phpt  027-handshake-bad-version.phpt  028-handshake-missing-key.phpt  029-handshake-bad-method.phpt  030-utf8-failfast-teardown.phpt  031-outbound-fragmentation.phpt  032-closed-exception-code.phpt  033-foreach-iterator.phpt  034-hot-reload-ws.phpt  035-recv-queue-overflow.phpt  036-pmce-window-bits.phpt  037-h2-trysend-backpressure.phpt  038-handler-exception-precommit.phpt  038-rooms-cross-worker.phpt  038-topics-cross-worker.phpt  (+26 more)
tests/unit/: .gitignore  CMakeLists.txt  Makefile
tests/unit/common/: multipart_stubs.c
tests/unit/compression/: compression_stubs.c  test_gzip_encoder.c  test_negotiate.c
tests/unit/core/: test_request_wire.c  test_response_wire.c  test_thread_queue.c  test_tls_session.c
tests/unit/http1/: test_multipart_parser.c  test_multipart_processor.c  test_parser.c  test_parser_edge_cases.c  test_parser_security.c
tests/unit/http2/: test_http2_session.c  test_http2_strategy.c
tests/unit/http3/: http3_stubs.c  test_http3_packet.c  test_http3_steer.c
tests/unit/static/: test_static_decoders.c  test_win32_compat.c
(+580 files in other folders)
